<resources>
    <string name="app_name">Lavado de Autos Rayo McQueen</string>
    <string name="txtNombrePrincipal">Lavado de Autos Rayo McQueen</string>
    <string name="btnIngresarPrincipal">Iniciar Sesion</string>
    <string name="title_activity_menu_navegable">MenuNavegable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rayo McQueen</string>
    <string name="nav_header_subtitle">Lavado de Autos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_servicio">Servicios</string>
    <string name="menu_reserva">Solicitud</string>
    <string name="menu_estado">Historial</string>
    <string name="menu_cliente">Perfil</string>
    <string name="menu_supervisor">Supervisor</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_detalle_servicio">Detalle Servicio</string>

    <string name="home_second">Home Second</string>
    <string name="btnDetalleServicio">Detalle</string>
    <string name="btnReservar">Realizar Solicitud</string>
    <string name="txtTituloUbicacion">¿Donde lo quieres?,Escoge un lugar.</string>
    <string name="txtNombreServicio">Servicio:</string>
    <string name="btnAgregarDireccion">Agregar Dirección</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnAtras">Atras</string>

    <string name="txtTituloVehiculo">¿Para quien lo quieres?,Escoge un Vehículo.</string>
    <string name="txtNombreCliente">Nombre Cliente:</string>
    <string name="txtNombreTipoDocumento">Tipo Documento:</string>
    <string name="txtNombreDocumento">N° Documento:</string>
    <string name="btnAgregarAuto">Agregar Auto</string>

    <string name="txtlabelFecha">Selecciona una fecha:</string>
    <string name="txtlabelHora">Selecciona una hora:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="servicio_prompt">Seleccione un Servicio</string>

    <string-array name="servicios_array">
        <item>Lavado de Salón</item>
        <item>Lavado Premium</item>
        <item>Renovación / Protección de Pintura</item>
    </string-array>

    <string-array name="tipodocumento_array">
        <item>D.N.I.</item>
        <item>R.U.C.</item>
        <item>Pasaporte</item>
    </string-array>


</resources>
